--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Node
         uses: actions/setup-node@v4
+        with:
           node-version: 22
-      - name: Force Failure
-        run: (exit 1)
+      - name: Test version
+        run: (node --version)
